@@ -252,7 +252,7 @@ cvl_frame_t *cvl_frame_convolve(const cvl_frame_t *frame, const int *kernel, int
  * greater than \a t_len / 2) can be limited; in this case, some array entries
  * can be NULL. This function will use reflective indexing to compensate that.
  */
-cvl_frame_t *cvl_frame_convolve3d_separable(const cvl_frame_t *frames[], 
+cvl_frame_t *cvl_frame_convolve3d_separable(cvl_frame_t * const *frames, 
 	const int *h, int h_len, const int *v, int v_len, const int *t, int t_len)
 {
     cvl_assert(frames != NULL && h != NULL && v != NULL && t != NULL);
@@ -382,7 +382,7 @@ cvl_frame_t *cvl_frame_convolve3d_separable(const cvl_frame_t *frames[],
  * greater than \a mt_len / 2) can be limited; in this case, some array entries
  * can be NULL. This function will use reflective indexing to compensate that.
  */
-cvl_frame_t *cvl_frame_convolve3d(const cvl_frame_t *frames[], 
+cvl_frame_t *cvl_frame_convolve3d(cvl_frame_t * const *frames, 
 	const int *kernel, int dim_t, int dim_y, int dim_x)
 {
     cvl_assert(frames != NULL && kernel != NULL);
