@@ -1,4 +1,5 @@
 Version 0.0.2 (not yet released):
+- CVL: Fixed prototype of functions that get an array of frames.
 - CVL: Added functions to report the size of fields and frames.
 - CVL: Print a backtrace when cvl_assert() fails (only on glibc systems).
 - CVL/cvtool: Added xadd and xsub layering modes.
